--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -13,5 +13,10 @@
   		<artifactId>contract</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+      <dependency>
+          <groupId>jpublankproject</groupId>
+          <artifactId>model</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+      </dependency>
   </dependencies>
 </project>
