--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -18,5 +18,10 @@
           <artifactId>model</artifactId>
           <version>0.0.1-SNAPSHOT</version>
       </dependency>
+      <dependency>
+          <groupId>jpublankproject</groupId>
+          <artifactId>view</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+      </dependency>
   </dependencies>
 </project>
